@@ -1,5 +1,12 @@
 2017-10-24  Bruno Haible  <bruno@clisp.org>
 
+	Fix compilation errors on HP-UX (regression from 2008-03-12).
+	* unix.d: On HP-UX, undefine also HAVE_DLADDR etc.
+	* foreign.d (foreign_library_variable, foreign_library_function):
+	Fix declaration to match the one on the other platforms.
+
+2017-10-24  Bruno Haible  <bruno@clisp.org>
+
 	Don't assume that /dev/fd[012] exists on AIX and HP-UX.
 	* stream.d (handle_pathname): On AIX and HP-UX, return NIL.
 	* makemake.in (check-script): Don't run unportable test on AIX and
